# ProjectSetup-3.0

./: .gitignore  CHANGELOG.md  Config.py  MANIFEST.in  README.md  data.py  index.py  ps3.bat  ps3.sh  ps3cli.bat  pyproject.toml  tool.py
.github/workflows/: build-release.yml  python-publish.yml
Services/: ArrowsService.py  CLIService.py  CLIService.pyw  ProjectManagerService.py
data/: config.py
modules/DataMap/: project_map.py
modules/Enums/: ProjectType.py
modules/Interfaces/: BaseProject.py
modules/Languages/: AssemblyProject.py  CProject.py  CSSProject.py  CSharpProject.py  CppProject.py  CrystalProject.py  DartProject.py  ElixirProject.py  GameDevProject.py  GoProject.py  HTMLProject.py  HaskellProject.py  JSONProject.py  JavaProject.py  JavaScriptProject.py  KotlinProject.py  LatexProject.py  LuaProject.py  MarkdownProject.py  MobileProject.py  PHPProject.py  PerlProject.py  PowerShellProject.py  PythonProject.py  RProject.py  RobloxLuaProject.py  RubyProject.py  RustProject.py  SQLProject.py  ScalaProject.py  ShellProject.py  SwiftProject.py  TypeScriptProject.py  VProject.py  YAMLProject.py  ZigProject.py
projectsetup3/: Config.py  LICENSE  README.md  __init__.py  cli.py  index.py  projectsetup3.spec  ps3.bat  ps3cli.bat  run.py  tool.py
projectsetup3.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
projectsetup3/Fonts/: README.md
projectsetup3/Services/: ArrowsService.py  CLIService.py  GeminiClient.py  HistoryService.py  InstallService.py  ProjectManagerService.py  READMEService.py
projectsetup3/appdata/Languages/: README.md  assembly.json  c.json  clojure.json  coffeescript.json  cpp.json  crystal.json  csharp.json  dart.json  dockerfile.json  elixir.json  elm.json  fsharp.json  go.json  groovy.json  haskell.json  haxe.json  ini.json  java.json  javascript.json  kotlin.json  lua.json  makefile.json  markdown.json  ocaml.json  perl.json  php.json  powershell.json  python.json  r.json  racket.json  roblox_lua.json  ruby.json  rust.json  scala.json  shell.json  spring.json  sql.json  swift.json  tex.json  (+8 more)
projectsetup3/modules/Class/: BaseProject.py  Icons.py
projectsetup3/modules/Enums/: ProjectType.py
projectsetup3/modules/Interfaces/: BaseProject.py
projectsetup3/requirements/: requirements.txt
requirements/: requirements.txt
src/: Main.java
src/Config/: Config.java
src/Data/: Data.java
src/Tool/: Tool.java
(+31 files in other folders)
