[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projectsetup3"
version = "1.0.0"
description = "PS3 Project Setup"
requires-python = ">=3.10"
dependencies = ["rich"]

[project.scripts]
ps3cli = "projectsetup3.cli:main"
ps3 = "projectsetup3.index:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["projectsetup3*"]
